# modern-python

./: .flake8  .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
src/modern_python/: console.py  wikipedia.py
tests/: test_console.py
