[tool.poetry]
name = "modern-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["oxygenkun <oxygenkun.1@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/oxygenkun/modern-python"
repository = "https://github.com/oxygenkun/modern-python"
keywords = ["tutorial"]

[tool.poetry.scripts]
modern-python = "modern_python.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
