[tool.poetry]
name = "modern-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["oxygenkun <oxygenkun.1@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/oxygenkun/modern-python"
repository = "https://github.com/oxygenkun/modern-python"
keywords = ["tutorial"]

[tool.poetry.scripts]
modern-python = "modern_python.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.3.23"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
